--- a/src/Employees.Contracts/ClientApp/src/styles.scss
+++ b/src/Employees.Contracts/ClientApp/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.full-width {
+  width: 100%;
+}
