--- a/src/Employees.Contracts/ClientApp/src/app/views/employees/employees.component.html
+++ b/src/Employees.Contracts/ClientApp/src/app/views/employees/employees.component.html
@@ -44,7 +44,7 @@
     </table>
     <div [ngStyle]="{'display': hasItem === false ? '':'none' }" class="div-no-data">
       <img class="img-no-data" src="../../../assets/img/search.svg" alt="">
-      <div class="text-no-data">No hay registros para mostrar.</div>
+      <div class="text-no-data">There are no records.</div>
     </div>
   </div>
 
